@@ -1970,7 +1970,8 @@ MagickExport MagickBooleanType TransformImage(Image **image,
 %   T r a n s f o r m I m a g e s                                             %
 %                                                                             %
 %                                                                             %
-%                                                                             % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%                                                                             %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 %  TransformImages() calls TransformImage() on each image of a sequence.
 %
@@ -2147,8 +2148,6 @@ MagickExport Image *TransposeImage(const Image *image,ExceptionInfo *exception)
   page=transpose_image->page;
   Swap(page.width,page.height);
   Swap(page.x,page.y);
-  if (page.width != 0)
-    page.x=(ssize_t) (page.width-transpose_image->columns-page.x);
   transpose_image->page=page;
   if (status == MagickFalse)
     transpose_image=DestroyImage(transpose_image);
@@ -2285,6 +2284,8 @@ MagickExport Image *TransverseImage(const Image *image,ExceptionInfo *exception)
   page=transverse_image->page;
   Swap(page.width,page.height);
   Swap(page.x,page.y);
+  if (page.width != 0)
+    page.x=(ssize_t) (page.width-transverse_image->columns-page.x);
   if (page.height != 0)
     page.y=(ssize_t) (page.height-transverse_image->rows-page.y);
   transverse_image->page=page;
